# naver-smart-store-rag-chatbot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-react  README.md  compose.yaml  pyproject.toml
chatbot_ui/: package-lock.json  package.json
chatbot_ui/src/: App.tsx
chatbot_ui/src/hooks/: UseMessagesBySession.tsx  UseSessions.tsx  UseStreaming.tsx
naver_smart_store_rag_chatbot/: main.py  test_e2e.py  test_main.py
naver_smart_store_rag_chatbot/api/v1/: __init__.py
naver_smart_store_rag_chatbot/api/v1/sessions/: __init__.py  chats_response.py  recommend_response.py  send_user_message_request.py  send_user_message_response.py  sessions_response.py
naver_smart_store_rag_chatbot/api/v1/streaming/: __init__.py
naver_smart_store_rag_chatbot/domain/entities/: chat.py  chat_session.py  document.py
naver_smart_store_rag_chatbot/domain/interfaces/: chat_repository.py  chat_session_repository.py
naver_smart_store_rag_chatbot/domain/interfaces/repositories/: chat_repository.py
naver_smart_store_rag_chatbot/domain/interfaces/services/: llm_queue_service.py  llm_rag_service.py  vector_db_service.py
naver_smart_store_rag_chatbot/domain/usecases/: find_all_chat_sessions_use_case.py  find_chats_by_session_id_use_case.py  send_user_message_use_case.py  streaming_system_message_use_case.py
naver_smart_store_rag_chatbot/infrastructure/: di_container.py
naver_smart_store_rag_chatbot/infrastructure/repositories/: mongo_chat_repository.py  mongo_chat_session_repository.py  mongo_client.py
naver_smart_store_rag_chatbot/infrastructure/services/: cachetools_llm_queue_service.py  chorma_db_vector_db_service.py  openai_llm_rag_service.py
scripts/: preprocessing.py  structuring.py  vectorizing.py
