[tool.poetry]
name = "naver-smart-store-rag-chatbot"
version = "0.1.0"
description = ""
authors = ["Je-Hwan Yoo <yoojehwan1875@gmail.com>"]
readme = "README.md"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select=["E4", "E7", "E9", "F", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
chromadb = "^0.6.1"
python-dotenv = "^1.0.1"
openai = "^1.59.3"
motor = "^3.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
pre-commit = "^4.0.1"
httpx = "^0.28.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
